--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Trilha de CSS - DIO</title>
 </head>
 <body>
@@ -36,9 +37,11 @@
         </div>
       </div>
     </section>
+    
     <section id="transform-world">
       <p>TRANSFORME O MUNDO COM A GENTE</p>
     </section>
+
     <section id="professional-challenges">
       <h2>Evolua e encare novos desafios profissionais</h2>
       <img src="assets/images/professional-challenges.png" title="Homem lendo depoimentos em um tablet" alt="Homem lendo depoimentos em um tablet">
@@ -49,6 +52,7 @@
         A nossa missão é te preparar para que você conecte-se com as melhores oportunidades.
       </p>
     </section>
+    
   </main>
   <footer>
     <img class="dio-logo" src="assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
